--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 @import '~@angular/material/core/theming/prebuilt/indigo-pink.css';
 
 body {
   margin: 0;
-}
-
-.example-fill-remaining-space {
-  flex: 1 1 auto;
+  font-family: Roboto, sans-serif;
 }
